--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -1,229 +1,101 @@
-.bars {
-    /*   background-color:pink; */
-    position: absolute;
-    width: 27px;
-    height: 27px;
-    top: 30px;
-    right: 30px;
-    cursor: pointer;
-    z-index: 101;
-    padding-top:9px;
-  }
-  
-  .bar {
-    width: 100%;
-    height: 4px;
-    background-color: #fff;
-    position: absolute;
-  }
-  
-  span::before,
-  span::after {
-    content: "";
-    display: block;
-    background-color: #fff;
-    width: 100%;
-    height: 4px;
-    position: absolute;
-  }
-  
-  .bar::before {
-    transform: translateY(-9px);
-  }
-  
-  .bar::after {
-    transform: translateY(9px);
-  }
-  
-  .bars.active .bar {
-    background-color: transparent;
-  }
-  
-  .bars.active span::before {
-    animation: top-bar 1s;
-    animation-fill-mode: forwards;
-  }
-  
-  .bars.active span::after {
-    animation: bottom-bar 1s;
-    animation-fill-mode: forwards;
-  }
-  
-  
-  /* Navbar Links CSS */
-  
-  #nav {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    transition: all 1s;
-    z-index: -1;
-    overflow: hidden;
-    opacity: 0;
-  }
-  
-  #nav a {
-    color: #fff;
-    text-decoration: none;
-    line-height: 70vw;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-indent: 50vw;
-    border-radius: 50%;
-    transition: all .5s;
-  }
-  
-  #nav a:hover {
-    background: #357FFD;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  
-  .visible {
-    z-index: 100 !important;
-    opacity: 1 !important;
-  }
-  
-  .shape-circle {
-    border-radius: 50%;
-    width: 20vw;
-    height: 20vw;
-    top: -10vw;
-    right: -10vw;
-    position: absolute;
-    transition: all 1s ease-in-out;
-    background: #2979FF;
-    box-shadow: 0 0px 0px rgba(4, 26, 62, 0.5);
-  }
-  
-  nav.visible li:first-child {
-    width: 200vw;
-    height: 200vw;
-    top: -100vw;
-    right: -100vw;
-    z-index: 5;
-    transition: all .5s ease-in-out;
-    box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
-  }
-  
-  nav.visible li:nth-child(2) {
-    width: 150vw;
-    height: 150vw;
-    top: -75vw;
-    right: -75vw;
-    z-index: 6;
-    transition: all .6s ease-in-out;
-    box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
-  }
-  
-  nav.visible li:nth-child(3){
-    width: 100vw;
-    height: 100vw;
-    top: -50vw;
-    right: -50vw;
-    z-index: 7;
-    transition: all .7s ease-in-out;
-    box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
-  }
-  
-  nav.visible li:last-child{
-    width: 50vw;
-    height: 50vw;
-    top: -25vw;
-    right: -25vw;
-    z-index: 8;
-    transition: all .8s ease-in-out;
-    box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
-  }
-  
-  nav.visible li:first-child a {
-    line-height: 265vw !important;
-      text-indent: 15vw !important;
-  
-  }
-  
-  nav.visible li:nth-child(2) a {
-    line-height: 200vw !important;
-    text-indent:17vw !important;
-  }
-  
-  nav.visible li:nth-child(3) a {
-    line-height: 137vw !important;
-      text-indent: 17vw !important;
-    
-  }
-  
-  nav.visible li:last-child a {
-    line-height: 70vw !important;
-    text-indent:12vw !important;
-  }
-  
-  
-  /* Main Body CSS */
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-  }
-  
-  h1 {
-    font-size: 60px;
-    text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    text-transform: uppercase;
-    font-size: 120px;
-    letter-spacing:5px;
-    padding-top:40px;
-  }
-  
-  article p {
-    padding-bottom: 15px;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  }
-  
-  article a {
-    color: #fff;
-    text-decoration: none;
-    opacity: .2;
-    font-size: 12px;
-  }
-  
-  article a:hover {
-    opacity: .8;
-  }
-  
-  @keyframes top-bar {
-    50% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: rotate(45deg) translateY(0);
-    }
-  }
-  
-  @keyframes bottom-bar {
-    50% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: rotate(-45deg) translateY(0);
-    }
-  }
-  
-  
-  @media screen and (max-width:800px) {
-  
-    h1 {
-      padding-top:80px;
-      font-size: 60px;
-    }
-  }
-  
+.wrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+  /* clip-path: circle(25px at calc(0% + 45px) 45px); */
+  clip-path: circle(25px at calc(100% - 45px) 45px);
+  transition: all 0.3s ease-in-out;
+}
+#active:checked ~ .wrapper{
+  clip-path: circle(75%);
+}
+.menu-btn{
+  position: absolute;
+  z-index: 2;
+  right: 20px;
+  /* left: 20px; */
+  top: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+  transition: all 0.3s ease-in-out;
+}
+#active:checked ~ .menu-btn{
+  background: #fff;
+  color: #4158d0;
+}
+#active:checked ~ .menu-btn i:before{
+  content: "\f00d";
+}
+.wrapper ul{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+}
+.wrapper ul li{
+  margin: 15px 0;
+}
+.wrapper ul li a{
+  color: none;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 5px 30px;
+  color: #fff;
+  position: relative;
+  line-height: 50px;
+  transition: all 0.3s ease;
+}
+.wrapper ul li a:after{
+  position: absolute;
+  content: "";
+  background: #fff;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  border-radius: 50px;
+  transform: scaleY(0);
+  z-index: -1;
+  transition: transform 0.3s ease;
+}
+.wrapper ul li a:hover:after{
+  transform: scaleY(1);
+}
+.wrapper ul li a:hover{
+  color: #4158d0;
+}
+input[type="checkbox"]{
+  display: none;
+}
+.content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  text-align: center;
+  width: 100%;
+  color: #202020;
+}
+.content .title{
+  font-size: 40px;
+  font-weight: 700;
+}
+.content p{
+  font-size: 35px;
+  font-weight: 600;
+}
