--- a/src/Component/Redirect/style.css
+++ b/src/Component/Redirect/style.css
@@ -20,7 +20,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: -1;
 }
 
 .centered-image {
@@ -35,7 +35,7 @@ body {
 
 .centered-image1 {
   position: absolute;
-  bottom: 68%;
+  bottom: 56%;
   left: 70%;
   width: 8rem;
   height: 8rem;
@@ -115,4 +115,106 @@ loading-bar3 {
 img {
   height: 60px;
   width: 60px;
+}
+#wrapper1 {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80em;
+  position:absolute;
+  left: 14%;
+  bottom: 20%;
+}
+
+#container9 {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 1em;
+  width: 100%;
+}
+
+
+
+h1:hover {
+  animation-play-state: paused;
+}
+
+a {
+  color: #024794;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+@keyframes text-shadow {
+  0% {  
+      transform: translateY(0);
+      text-shadow: 
+          0 0 0 #0c2ffb, 
+          0 0 0 #2cfcfd, 
+          0 0 0 #fb203b, 
+          0 0 0 #fefc4b;
+  }
+
+  20% {  
+      transform: translateY(-1em);
+      text-shadow: 
+          0 0.125em 0 #0c2ffb, 
+          0 0.25em 0 #2cfcfd, 
+          0 -0.125em 0 #fb203b, 
+          0 -0.25em 0 #fefc4b;
+  }
+
+  40% {  
+      transform: translateY(0.5em);
+      text-shadow: 
+          0 -0.0625em 0 #0c2ffb, 
+          0 -0.125em 0 #2cfcfd, 
+          0 0.0625em 0 #fb203b, 
+          0 0.125em 0 #fefc4b;
+  }
+  
+ 60% {
+      transform: translateY(-0.25em);
+      text-shadow: 
+          0 0.03125em 0 #0c2ffb, 
+          0 0.0625em 0 #2cfcfd, 
+          0 -0.03125em 0 #fb203b, 
+          0 -0.0625em 0 #fefc4b;
+  }
+
+  80% {  
+      transform: translateY(0);
+      text-shadow: 
+          0 0 0 #0c2ffb, 
+          0 0 0 #2cfcfd, 
+          0 0 0 #fb203b, 
+          0 0 0 #fefc4b;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation: none !important;
+    transition: none !important;
+  }
+}
+.a{
+  font-size: 5rem;
+  color: greenyellow;
+  display: flex;
+  justify-content: center;
+}
+.b{
+  font-size: 5rem;
+  font-weight: 1000;
+  display: flex;
+  justify-content: center;
+}
+#container10{
+  position: relative;
+  top: 1.5rem;
 }
