--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -10,7 +10,7 @@
 :root{
     --body-color: #E4E9F7;
     --nav-color: #E4E9F7;
-    --side-nav: #010718;
+    --side-nav: rgba(35, 38, 47, 0.932);
     --text-color: #090909;
     --text-color1:rgb(246, 246, 246);
     --search-bar: #F2F2F2;
@@ -194,6 +194,12 @@ nav .nav-bar .logo a{
 body.dark .search-field input{
     color: var(--text-color);
 }
+#searchIcon {
+    color: black; /* Set the color to black */
+  }
+  .dark #searchIcon{
+    color: white;
+  }
 .search-field i{
     position: absolute;
     color: var(--nav-color);
@@ -219,19 +225,22 @@ body.dark .search-field i{
         background-color: var(--side-nav);
         z-index: 100;
         transition: all 0.4s ease;
-        color: var(--text-color1);
+        color: white;
     }
     nav.active .menu{
         left: -0%;
         color: var(--text-color1);
+        color: white;
     }
     nav.active .nav-bar .navLogo{
       color: var(--text-color1);
+      color: white;
     }
     nav.active .nav-bar .navLogo a{
         opacity: 0;
         transition: all 0.3s ease;
         color: var(--text-color1);
+        color: white;
     }
     .menu .logo-toggle{
         display: block;
@@ -240,23 +249,26 @@ body.dark .search-field i{
         align-items: center;
         justify-content: space-between;
         color: var(--text-color1);
+        color: white;
 
     }
     .logo-toggle .siderbarClose{
         color: var(--text-color1);
         font-size: 24px;
         cursor: pointer;
+        color: white;
         
     }
     .nav-bar .nav-links{
         flex-direction: column;
         padding-top: 30px;
-        color: var(--text-color1);
+       
+        color: white;
        
     }
     .nav-links li a{
         display: block;
         margin-top: 20px;
-        color: var(--text-color1);
+        color: white;
     }
 }
